--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 serde = {version="1.0.147",features=["derive"]}
 ron = "0.8"
+polars = {version="0.25.1", features=["temporal","lazy"]}
