--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 serde = {version="1.0.147",features=["derive"]}
 ron = "0.8"
 polars = {version="0.25.1", features=["temporal","lazy"]}
+serde_json = "1.0"
