--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,17 @@
 name = "emsdesign"
 version = "0.1.0"
 edition = "2021"
+description = "A package for performing engineering design"
+repository = "https://github.com/egilmonsas/emsdesign"
+license = "MIT OR Apache-2.0"
+keywords = ["NGI", "Eurocode","Norway","Steel"]
+categories = ["engineering-tools"]
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 serde = {version="1.0.147",features=["derive"]}
 ron = "0.8"
-polars = {version="0.25.1", features=["temporal","lazy"]}
+polars = {version="0.26.1", features=["temporal","lazy"]}
 serde_json = "1.0"
