--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ readme = "README.md"
 [dependencies]
 serde = {version="1.0.147",features=["derive"]}
 ron = "0.8"
-polars = {version="0.26.1", features=["lazy"]}
 serde_json = "1.0"
+phf = { version = "0.11", features = ["macros"] }
+
